# swarm-hr

./: hr_database.db  pyproject.toml
src/swarm_hr/: __init__.py  actions.py  database.py  external.py  main.py  mock_data.py  utils.py
